Language overflow - instructor profile- fixed ✅

--- a/src/components/InstructorProfileInfo/InstructorProfileInfo.scss
+++ b/src/components/InstructorProfileInfo/InstructorProfileInfo.scss
@@ -39,7 +39,7 @@
 
 .instructor__quality-opt {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 10px;
 
   .icon {
@@ -51,7 +51,8 @@
   .titleWrapper {
     display: flex;
     gap: 15px;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
     .language {
       font-size: 12px;
       padding: 3px 5px;
